[package]
name = "signaling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_bytes = "0.11.6"
redis = { version = "0.21.5", features = [
    "r2d2",
    "tokio-comp",
    "connection-manager",
] }
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"
tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
anyhow = "1.0.58"
ring = "0.16.20"
base64 = "0.13.0"
once_cell = "1.12.0"
rand = "0.8.5"
regex = "1.5.6"
bincode = "1.3.3"
ctrlc = { version = "3.2.2", features = ["termination"] }
futures = "0.3.21"
bytes = "1.1.0"
dashmap = "5.3.4"
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "all-databases",
    "chrono",
] }
num_cpus = "1.13.1"
scopeguard = "1.1.0"

[profile.dev.package.sqlx-macros]
opt-level = 3
