[package]
name = "signaling"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
anyhow = "1.0.66"
once_cell = "1.16.0"
rand = "0.8.5"
futures = "0.3.25"
rusqlite = { version = "0.28.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
num_cpus = "1.14.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "parking_lot",
    "env-filter",
] }
moka = { version = "0.9.6", features = ["future"] }
dotenvy = "0.15.6"
axum = "0.6.1"
serde = "1.0.149"
serde_json = "1.0.89"
serde_bytes = "0.11.7"
serde_with = "2.1.0"
bytes = "1.3.0"
bincode = "1.3.3"
base64 = "0.20.0"
rust-embed = "6.4.2"
mime_guess = "2.0.4"
reqwest = { version = "0.11.13", features = ["json"] }
