[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
tokio = { version = "1.24.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
anyhow = "1.0.68"
once_cell = "1.17.0"
rand = "0.8.5"
futures = "0.3.25"
rusqlite = { version = "0.28.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
num_cpus = "1.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "parking_lot",
    "env-filter",
] }
moka = { version = "0.9.6", features = ["future"] }
dotenvy = "0.15.6"
axum = "0.6.2"
serde = "1.0.152"
serde_json = "1.0.91"
serde_bytes = "0.11.8"
serde_with = "2.2.0"
bytes = "1.3.0"
bincode = "1.3.3"
base64 = "0.21.0"
rust-embed = "6.4.2"
mime_guess = "2.0.4"
reqwest = { version = "0.11.13", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
sysinfo = "0.27.6"
