[package]
name = "signaling_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
tonic = { version = "0.8.0", features = ["gzip"] }
prost-reflect = { version = "0.9.2", features = ["derive"] }
once_cell = "1.14.0"

[build-dependencies]
tonic-build = "0.8.0"
prost-build = "0.11.1"
prost-reflect-build = "0.9.0"
