[package]
name = "signaling_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
anyhow = "1.0.58"
once_cell = "1.12.0"
rand = "0.8.5"
futures = "0.3.21"
dashmap = "5.3.4"
rusqlite = { version = "0.28.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
num_cpus = "1.13.1"
scopeguard = "1.1.0"
signaling_proto = { path = "../proto" }
prost = "0.11.0"
tonic = { version = "0.8.0", features = ["gzip"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["parking_lot"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
moka = "0.9.4"
prost-reflect = "0.9.2"
dotenvy = "0.15.3"
